--- a/bitarray/Cargo.toml
+++ b/bitarray/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "bitstr"
+name = "bitarray"
 version = "0.1.0"
 edition = "2021"
 
 
 [dependencies]
 proptest = { version = "=1.5.0", optional = true }
-rand = { version = "*", optional = true }
+rand = { version = "=0.8.5", optional = true }
 
 [features]
 proptest = ["dep:proptest", "dep:rand"]
 
 [dev-dependencies]
 proptest = "=1.5.0"
-rand = "*"
+rand = "=0.8.5"
