--- a/bitarray/Cargo.toml
+++ b/bitarray/Cargo.toml
@@ -6,11 +6,9 @@ edition = "2021"
 
 [dependencies]
 proptest = { version = "=1.5.0", optional = true }
-rand = { version = "=0.8.5", optional = true }
 
 [features]
-proptest = ["dep:proptest", "dep:rand"]
+proptest = ["dep:proptest"]
 
 [dev-dependencies]
 proptest = "=1.5.0"
-rand = "=0.8.5"
