--- a/konane/Cargo.toml
+++ b/konane/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 bitarray = { path = "../bitarray" }
-cgt = { version = "0.5", optional = true }
+cgt = { path = "../../cgt-tools", optional = true }
 rand = { version = "*", optional = true }
 duckdb = { version = "=1.1.1", optional = true, features = ["bundled"] }
 itertools = "*"
@@ -27,7 +27,7 @@ required-features = ["rand", "cgt"]
 
 [[bin]]
 name = "duckdb"
-required-features = ["duckdb"]
+required-features = ["duckdb", "cgt"]
 
 
 [dev-dependencies]
