--- a/konane/Cargo.toml
+++ b/konane/Cargo.toml
@@ -10,6 +10,7 @@ rand = { version = "*", optional = true }
 duckdb = { version = "=1.1.1", optional = true, features = ["bundled"] }
 itertools = "*"
 thiserror = "*"
+bnum = "0.12.0"
 
 [features]
 cgt = ["dep:cgt"]
