--- a/konane/Cargo.toml
+++ b/konane/Cargo.toml
@@ -10,8 +10,7 @@ rand = { version = "*", optional = true }
 duckdb = { version = "=1.1.1", optional = true, features = ["bundled"] }
 itertools = "*"
 thiserror = "*"
-bnum = "0.12.0"
-polars = { version = "*", optional = true , features = ["polars-io", "parquet"]}
+polars = { version = "*", optional = true , features = ["polars-io", "parquet", "dtype-array"]}
 
 [features]
 cgt = ["dep:cgt"]
