--- a/konane.py/Cargo.toml
+++ b/konane.py/Cargo.toml
@@ -11,5 +11,5 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = {version = "0.22.0", features = ["multiple-pymethods"]}
 konane = { path = "../konane", features = ["cgt"] }
-bitarray = { path = "../bitarray" }
 cgt = { path = "../../cgt-tools" }
+bnum = "*"
