add mise,vale config

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,6 +1,6 @@
-Packages = Microsoft, write-good, proselint
-StylesPath = .github/styles
+StylesPath = styles
 MinAlertLevel = suggestion
+Packages = Microsoft, proselint, write-good, alex, Joblint
 
 [*]
 TokenIgnores = \#[^\n$]+
@@ -8,8 +8,19 @@ TokenIgnores = (\$[^$]+\$)
 
 [formats]
 typ = md
+html = html
 
 [*.typ]
 BasedOnStyles = Vale, Microsoft, write-good, proselint
 Microsoft.We = NO
 CommentDelimiters = {/*, */}
+
+[*.html]
+BasedOnStyles = Microsoft, proselint, write-good, alex, Joblint, konjecture
+
+Microsoft.We = NO
+
+# Usually just mischaracterizes an all-caps word
+Microsoft.Acronyms = NO
+Microsoft.Headings = NO
+alex.Condescending = NO
