fix trigger path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     branches: 
       - main
     paths:
-      - 'web/konane.html'
+      - 'web/walkthrough.html'
   workflow_dispatch:
 
 jobs:
