fix workflow checkout perms

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
       with:
         repository: ishehadeh/ishehadeh.github.io
         path: ./ishehadeh.github.io
+        ref: 'master'
+        token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
     - name: Copy walkthrough.html to www/konane.html
       run: cp ./web/walkthrough.html ./ishehadeh.github.io/www/konane.html
     - name: Commit update in GitHub pages repo
