clean up workflow, use pat

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,16 +26,22 @@ jobs:
         repository: ishehadeh/ishehadeh.github.io
         path: ./ishehadeh.github.io
         ref: 'master'
-        token:  ${{ secrets.GITHUB_TOKEN }}
+        token:  ${{ secrets.PAGES_REPO_PAT }}
     - name: Copy walkthrough.html to www/konane.html
       run: cp web/walkthrough.html ./ishehadeh.github.io/www/konane.html
+    
+    - name: Configure Git
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+
     - name: Commit update in GitHub pages repo
       run: |
         cd ./ishehadeh.github.io
-        git config user.name github-actions
-        git config user.email github-actions@github.com
         git add www/konane.html
         git commit -m 'update konane'
-        git push
-      env:
-        BRANCH: master
+    
+    - name: Git Push
+      run: |
+        cd ./ishehadeh.github.io
+        git push origin master
